src/index.css
body {
  display: inline-flex;
  padding-top: 45px;
  flex-direction: column;
  align-items: center;
  background-color: #fff;
  gap: 50px;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
    monospace;
}

/* HOMEPAGE */
.home-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  padding-top: 45px;
}

/* HEADER */
.kasa-header {
  display: flex;
  width: 1440px;
  height: 68px;
  justify-content: center;
  align-items: center;
  gap: 720.678px;
}

.kasa-logo {
  width: 210.322px;
  height: 68px;
  flex-shrink: 0;
}

.nav a {
  font-family: Montserrat;
  font-size: 24px;
  margin-left: 57px;
  font-weight: 500;
  text-decoration: none;
  color: #FF6060;
}

.nav a:focus {
  text-decoration: underline;
}

/* BANNER */
.banner {
  display: flex;
  justify-content: center;
  align-items: center;
  width: 1240px;
  height: 223px;
  border-radius: 25px;
}

.banner-img {
  object-fit: cover;
  border-radius: 25px;
  filter: brightness(70%);
}

.banner h1 {
  position: absolute;
  font-family: Montserrat;
  font-size: 48px;
  font-weight: 500;
  line-height: 142.6%;
  color: #FFF;
}

/* CARDS */
.card-wrapper {
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  width: 1240px;
  flex-shrink: 0;
  border-radius: 25px;
  margin-top: 50px;
  padding: 50px;
  background: #F6F6F6;
}

.card-link {
  display: flex;
  align-items: flex-end;
  width: 340px;
  height: 340px;
  flex-shrink: 0;
  border-radius: 10px;
  padding: 10px;
  margin-bottom: 50px;
  text-decoration: none;
}

.card-name {
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  line-height: 142.6%;
  color: #FFF;
}

/* ABOUT */
.about-wrapper {
  display: flex;
  padding-top: 45px;
  flex-direction: column;
  align-items: center;
  gap: 50px;
}

/* COLLAPSE */
.btn-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 1023px;
}

.collapse {
  width: 100%;
  margin-bottom: 30px;
}

.collapse-btn {
  display: flex;
  justify-content: space-between;
  font-family: Montserrat;
  font-size: 24px;
  font-weight: 500;
  width: 100%;
  padding: 10px 20px 10px 15px;
  margin: 0;
  border-radius: 5px;
  border: none;
  color: #FFF;
  background: var(--Red, #FF6060);
}

.collapse-arrow {
  transform: rotate(180deg);
  transition: all .5s ease;
}

.collapse-content {
  display: none;
  margin: 0;
  width: 98%;
  padding: 11px;
  background-color: #F6F6F6;
  color: #FF6060;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  line-height: 142.6%;
}

.isClicked {
  display: block;
}

.rotate {
  transform: rotate(0);
}

/* SLIDESHOW */
.slideshow-wrapper {
  margin: 0 auto;
  display: flex;
  align-items: center;
}

.slideshow-controls {
  position: absolute;
  width: 1240px;
  display: flex;
  justify-content: space-between;
}

.control-left,
.control-right {
  border: none;
  background: none;
}

.slideshow-number {
  display: flex;
  flex-direction: column;
  justify-content: flex-end;
  color: #FFF;
  height: 350px;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  text-align: center;
  line-height: 142.6%;
}

.slideshow-img {
  width: 1240px;
  height: 415px;
  border-radius: 25px;
  object-fit: cover;
}

/* ERROR */
.error-wrapper {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 1440px;
  padding-top: 40px;
  gap: 139px;
}

.error {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.error-title {
  color: #FF6060;
  font-family: Montserrat;
  font-size: 288px;
  line-height: 142.6%;
}

.error-text {
  color: #FF6060;
  font-family: Montserrat;
  font-size: 36px;
  font-weight: 500;
  line-height: 142.6%;
}

.link-home {
  color: #FF6060;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  line-height: 142.6%;
  text-decoration-line: underline;
  margin-bottom: 139px;
}

/* LOGEMENTS */
.location-wrapper {
  display: flex;
  padding-top: 45px;
  padding-bottom: 30px;
  flex-direction: column;
  gap: 50px;
}

.location-header {
  margin: 0 auto;
  display: flex;
  justify-content: space-between;
  align-items: center;
  width: 1240px;
}

.location-title {
  color: #FF6060;
  font-family: Montserrat;
  font-size: 36px;
  font-weight: 500;
  line-height: 142.6%;
}

.location-location {
  color: #FF6060;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  line-height: 142.6%;
}

.location-host {
  display: flex;
  align-items: center;
}

.location-host h3 {
  color: #FF6060;
  text-align: right;
  font-family: Montserrat;
  font-size: 18px;
  font-weight: 500;
  line-height: 142.6%;
}

.location-host img {
  width: 64px;
  height: 64px;
  border-radius: 50%;
}

.tags {
  display: flex;
  align-items: center;
}

.tags h3 {
  width: 150px;
  height: 20px;
  border-radius: 15px;
  color: #FFF;
  background-color: #FF6060;
  text-align: center;
  font-family: Montserrat;
  font-size: 14px;
  font-weight: 500;
  padding: 5px;
  margin-right: 10px;
  line-height: 142.6%;
}

.location-btn {
  margin: 0 auto;
  display: flex;
  width: 1240px;
  justify-content: space-between;
}

.location-btn div {
  width: 45%;
}

/* RATE */
.rating-wrapper {
  margin-top: 20px;
}

/* FOOTER */
.footer {
  background-color: black;
  width: 1440px;
  height: 209px;
  padding-top: 66px;
}

.kasa-footer {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: flex-end;
  gap: 28.556px;
}

.logo-footer {
  width: 122px;
  height: 39.444px;
  filter: saturate(0) brightness(2);
}

.copyright {
  text-align: center;
  color: white;
  font-family: Montserrat;
  font-weight: 500;
  line-height: 142.6%;
}

/* MEDIA QUIERIES */
@media (max-width: 659px) {

  /* HOME */
  .home-wrapper {
    width: auto;
  }

  /* HEADER */
  .kasa-header {
    justify-content: space-around;
    width: 1160px;
    height: 200px;
    gap: 0;
  }

  .kasa-logo {
    width: 350px;
    height: 130px;
  }

  .nav a {
    font-size: 60px;
    line-height: 142.6%;
  }

  /* BANNER */
  .banner {
    width: auto;
    height: auto;
    justify-content: start;
  }

  .banner-img {
    width: 1050px;
    height: 300px;
  }

  .banner h1 {
    width: 700px;
    padding-left: 20px;
    font-size: 70px;
    line-height: 100%;
  }

  /* CARDS */
  .card-wrapper {
    width: auto;
    flex-direction: column;
    background-color: #FFF;
  }

  .card-link {
    width: 1050px;
    height: 800px;
  }

  .card-name {
    font-size: 70px;
  }

  /* COLLAPSE */
  .btn-wrapper {
    width: auto;
  }

  .collapse {
    width: 1050px;
    margin-bottom: 50px;
  }

  .collapse-btn {
    width: 100%;
    height: 100px;
    margin-bottom: 0;
    border-radius: 15px;
    font-size: 50px;
    align-items: center;
  }

  .collapse-arrow {
    width: 50px;
    height: 50px;
  }

  .collapse-content {
    font-size: 45px;
    margin: 0;
  }

  /* SLIDESHOW */
  .slideshow-controls {
    width: 1050px;
  }

  .slideshow-number {
    font-size: 40px;
    height: 750px;
  }

  .slideshow-img {
    width: 1050px;
    height: 800px;
  }

  /* ERROR */
  .error-wrapper {
    width: auto;
  }

  .error-text {
    font-size: 60px;
    padding: 0 200px;
    text-align: center;
  }

  .link-home {
    font-size: 50px;
  }

  /* LOGEMENTS */
  .location-wrapper {
    width: auto;
  }

  .location-header {
    display: flex;
    flex-direction: column;
  }

  .location-content {
    width: 1050px;
  }

  .location-tags {
    width: 1050px;
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    align-items: center;
  }

  .location-title {
    font-size: 70px;
  }

  .location-location {
    font-size: 50px;
  }

  .location-host h3 {
    font-size: 40px;
  }

  .location-host img {
    width: 130px;
    height: 130px;
  }

  .tags {
    display: flex;
    align-items: center;
  }

  .tags h3 {
    width: 250px;
    height: auto;
    font-size: 30px;
    margin-right: 40px;
  }

  .location-btn {
    width: 1050px;
    display: flex;
    flex-direction: column;
  }

  .location-btn div {
    width: 100%;
  }

  .rating-wrapper img {
    width: 90px;
    height: 70px;
  }

  /* FOOTER */
  .footer {
    display: flex;
    flex-direction: column;
    align-items: center;
    width: auto;
    height: 700px;
  }

  .kasa-footer {
    align-items: center;
    padding: 140px;
  }

  .logo-footer {
    align-items: center;
    width: 350px;
    height: 130px;
  }

  .copyright {
    font-size: 20px;
  }
}

